Added my own scratchpad indicator for waybar with tooltip contents

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -75,6 +75,7 @@ window#waybar.chromium {
 #backlight,
 #network,
 #custom-network,
+#custom-scratchpad-indicator,
 #pulseaudio,
 #custom-media,
 #tray,
